{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 356,
  "lineage": "273557fd-0efc-f7e7-f202-bb5fabf48a20",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ACA-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407544880077:internet-gateway/igw-0cdd6b96d483110c8",
            "id": "igw-0cdd6b96d483110c8",
            "owner_id": "407544880077",
            "vpc_id": "vpc-032dce977875fc0c5"
          },
          "dependencies": [
            "aws_vpc.ACA-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:407544880077:loadbalancer/app/test-lb-tf/030f64b7d7aee38b",
            "arn_suffix": "app/test-lb-tf/030f64b7d7aee38b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-lb-tf-973510567.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:407544880077:loadbalancer/app/test-lb-tf/030f64b7d7aee38b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a1786d7f12ef1e04"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a838b1a31a9bcb10"
              },
              {
                "subnet_id": "subnet-0f154b66df39dba3e"
              }
            ],
            "subnets": [
              "subnet-0a838b1a31a9bcb10",
              "subnet-0f154b66df39dba3e"
            ],
            "vpc_id": "vpc-032dce977875fc0c5",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ACA-test",
            "aws_subnet.ACA-subnet1",
            "aws_subnet.ACA-subnet2",
            "aws_vpc.ACA-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:407544880077:listener/app/test-lb-tf/030f64b7d7aee38b/f6adcaecd94178bb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:407544880077:targetgroup/tf-ACA-lb-alb-tg/14796994fe1e7dba",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:407544880077:listener/app/test-lb-tf/030f64b7d7aee38b/f6adcaecd94178bb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:407544880077:loadbalancer/app/test-lb-tf/030f64b7d7aee38b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.web_alb",
            "aws_lb_target_group.ACA-alb",
            "aws_security_group.ACA-test",
            "aws_subnet.ACA-subnet1",
            "aws_subnet.ACA-subnet2",
            "aws_vpc.ACA-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ACA-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:407544880077:targetgroup/tf-ACA-lb-alb-tg/14796994fe1e7dba",
            "arn_suffix": "targetgroup/tf-ACA-lb-alb-tg/14796994fe1e7dba",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:407544880077:targetgroup/tf-ACA-lb-alb-tg/14796994fe1e7dba",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-ACA-lb-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-032dce977875fc0c5"
          },
          "dependencies": [
            "aws_vpc.ACA-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ACA-rout",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407544880077:route-table/rtb-099767a1e5bc6732b",
            "id": "rtb-099767a1e5bc6732b",
            "owner_id": "407544880077",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cdd6b96d483110c8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ACA ROUTE"
            },
            "tags_all": {
              "Name": "ACA ROUTE"
            },
            "timeouts": null,
            "vpc_id": "vpc-032dce977875fc0c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ACA-gateway",
            "aws_vpc.ACA-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089c662732e92d77e",
            "route_table_id": "rtb-099767a1e5bc6732b",
            "subnet_id": "subnet-0f154b66df39dba3e"
          },
          "dependencies": [
            "aws_internet_gateway.ACA-gateway",
            "aws_route_table.ACA-rout",
            "aws_subnet.ACA-subnet1",
            "aws_vpc.ACA-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019633daec4c66434",
            "route_table_id": "rtb-099767a1e5bc6732b",
            "subnet_id": "subnet-0a838b1a31a9bcb10"
          },
          "dependencies": [
            "aws_internet_gateway.ACA-gateway",
            "aws_route_table.ACA-rout",
            "aws_subnet.ACA-subnet2",
            "aws_vpc.ACA-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ACA-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407544880077:security-group/sg-0a1786d7f12ef1e04",
            "description": "Security Group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1786d7f12ef1e04",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ACA Security Group",
            "name_prefix": "",
            "owner_id": "407544880077",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-032dce977875fc0c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ACA-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ACA-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407544880077:subnet/subnet-0f154b66df39dba3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f154b66df39dba3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "407544880077",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACA subnet1"
            },
            "tags_all": {
              "Name": "ACA subnet1"
            },
            "vpc_id": "vpc-032dce977875fc0c5"
          },
          "dependencies": [
            "aws_vpc.ACA-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ACA-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407544880077:subnet/subnet-0a838b1a31a9bcb10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a838b1a31a9bcb10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "407544880077",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACA subnet 2"
            },
            "tags_all": {
              "Name": "ACA subnet 2"
            },
            "vpc_id": "vpc-032dce977875fc0c5"
          },
          "dependencies": [
            "aws_vpc.ACA-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ACA-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407544880077:vpc/vpc-032dce977875fc0c5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01b019b9cf3652b67",
            "default_route_table_id": "rtb-03c3a4c345372a474",
            "default_security_group_id": "sg-0128b2612690c9e87",
            "dhcp_options_id": "dopt-023e5816d6c8b483c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-032dce977875fc0c5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03c3a4c345372a474",
            "owner_id": "407544880077",
            "tags": {
              "Name": "ACA VPC"
            },
            "tags_all": {
              "Name": "ACA VPC"
            }
          }
        }
      ]
    }
  ]
}